# Over-Engineered-Todo

./: .gitignore  CI-build.Dockerfile  Dockerfile  Jenkinsfile  LICENSE  README.md  api.Dockerfile  docker-compose.yml  prestart.sh  pretest.sh  pyproject.toml  sonar-project.properties
CI/: CI-python.Dockerfile  CI-sonar.Dockerfile  pretest.sh  ruff.toml  sonar-project.properties
CI-build/: CI-build.Dockerfile
alembic/: env.py
alembic/versions/: 3863180af7cc_added_users_table.py  6e78c6a8f347_init_migration.py  719b0fa26dbd_fas_45_update_entry_col_name_from_key.py  852ca0fcd860_add_created_date_col_to_users_table.py  f2e9bdeb9998_sqlalchemy2_0_updates.py
app/: config.py  deps.py  initial_data.py  main.py  postgres_pre_start.py  todo_entry_data.py
app/crud/: __init__.py  base.py  crud_entry.py  user.py
app/db/: base.py  init_db.py  session.py
app/helpers/: todo_entry_data.py
app/models/: ToDoEntry.py  ToDoList.py  User.py
app/routers/: authentication.py  sec_endpoint.py  (+1 more)
orm-todo/: README.md  api.Dockerfile  docker-compose.yml  pretest.sh  pyproject.toml  run.sh
orm-todo/alembic/: env.py
orm-todo/alembic/versions/: 1de1facccd39_added_todoentry_table.py  6e78c6a8f347_init_migration.py
orm-todo/app/: initial_data.py  main.py
orm-todo/app/crud/: base.py  crud_entry.py
orm-todo/app/db/: base.py  base_class.py  init_db.py  session.py
orm-todo/app/models/: ToDoEntry.py  ToDoList.py
orm-todo/app/schemas/: __init__.py  todo_entry.py
orm-todo/tests/: conf_unit.py  conftest.py
orm-todo/tests/unit/: test_api_endpoints.py
tests/: conftest.py
(+15 files in other folders)
