[tool.poetry]
name = "app"
version = "0.0.1"
description = "Over Engineered Todo List"
readme = "README.md"
authors = ["Robert"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23"
fastapi = "^0.100.0"
python-multipart = "~0.0.5"
pydantic = "^2.3"
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.22"
alembic = "^1.12.0"
tenacity = "^8.2.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "^7.3.1"
httpx = "^0.24.1"
pytest = "^7.4.0"
ruff = "^0.0.287"
